<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercise1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/tvThickness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/line_thickness" />

                <Spinner
                    android:id="@+id/sprThickness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/lineThickness" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/tvLineColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/line_color" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rgpColor">

                    <RadioButton
                        android:id="@+id/rdoRed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/red"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/rdoYellow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yellow" />

                    <RadioButton
                        android:id="@+id/rdoCyan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cyan" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvArrowKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arrow_keys" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageButton
                            android:id="@+id/btnUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"
                            tools:ignore="TouchTargetSizeCheck"
                            android:contentDescription="@string/up" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/btnLeft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp"
                            tools:ignore="TouchTargetSizeCheck"
                            android:contentDescription="@string/left" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageButton
                            android:id="@+id/btnRight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp"
                            tools:ignore="TouchTargetSizeCheck"
                            android:contentDescription="@string/right" />

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageButton
                            android:id="@+id/btnDown"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp"
                            tools:ignore="TouchTargetSizeCheck"
                            android:contentDescription="@string/down" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </TableRow>

                </TableLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClearCanvas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_canvas" />

            <TextView
                android:id="@+id/tvCoordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgCanvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/canvas" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>